src/components/App/index.css
* {
	margin: 0;
	padding: 0;
}

body {
	--light-green: #00E676;

	--z-index-page: 1;
	--z-index-fabs: 2;
	--z-index-introcard: 3;
	--z-index-sidebar: 4;
	--z-index-searchbar: 5;

	--border-radius: 8px;

	--transition-time: 300ms;
	--timing-function: cubic-bezier(0.4, 0, 0.2, 1);

	background: white !important;
}
@media (prefers-color-scheme: dark) {
	body{
		background: black !important;
	}
}


/* START prevent scroll and zoom on mobile devices */
html,
body,
#root{
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;

	overflow: hidden;
	touch-action: none;
}
/* END prevent scroll and zoom on mobile devices */


html body .MuiPaper-rounded,
html body .MuiButton-root{
	border-radius: 8px;
}

html body .addNewFab{
	z-index: var(--z-index-fabs);
	position: absolute;
	/*background: black !important;*/
	/*color: white;*/

	top: auto;
	bottom: 16px;
	left: 16px;
}
@media (max-width: 500px) {
	html body .addNewFab{
		right: 16px;
		left: auto;
		bottom: calc(20px + 16px);
	}
}

.introCard{
	z-index: var(--z-index-introcard);
    position: absolute;
    top: calc(52px + 32px);
    left: 16px;
    width: calc(400px - 32px);
    max-width: calc(100% - 32px);

    opacity: 1;
    transform: translate3d(0,0,0);
    transition:
    	transform var(--transition-time) var(--timing-function),
    	opacity var(--transition-time) var(--timing-function);
}
.introCard.closed{
	opacity: 0;
	transform: translate3d(0,-50%,0);
	pointer-events: none;
}
@media (max-width: 800px) {
	.introCard{
		top: calc(calc(52px + 32px) + calc(34px + 16px));
	}
}

.filtersPanel{
	z-index: var(--z-index-fabs);
	position: absolute;

	top: calc(16px + 9px);
	left: calc(400px + 8px);
	max-width: calc(calc(100% - 400px) - 16px);

	pointer-events: none;
}
.filtersPanel .filterMenuInner{
	pointer-events: none;
}
.filtersPanel .filterMenuInner button{
	pointer-events: auto;
}
@media (max-width: 800px) {
	.filtersPanel{
		top: calc(52px + 16px);
		left: 0;
		right: 0;
		padding: 16px;
		max-width: none;
		overflow: auto;
		white-space: nowrap;

		pointer-events: auto;
	}
	.filtersPanel .filterMenuInner{
		display: inline-block;
		padding-right: 16px;

		pointer-events: auto;
	}
}

.page {
	z-index: var(--z-index-page);
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	
	/*transition: left var(--transition-time) var(--timing-function);*/
}
/*@media (min-width: 800px) {
	.page.sidebarIsOpen{
		left: 400px;
	}
}*/


.SearchBar,
.Sidebar{
	position: absolute;
	height: auto;
	width: 400px;
	max-width: 100%;
	left: 0;
}

html body .Sidebar{
	/*opacity: 0.5;*/
	z-index: var(--z-index-sidebar);
	top: 0;
	bottom: 0;

	border-radius: 0;
	/*padding-top: 86px;*/

	overflow: auto;
	overflow-x: hidden;
	-webkit-overflow-scrolling: touch;
}
.Sidebar.hide{
	display: none;
}

.SearchBar{
	z-index: var(--z-index-searchbar);
	top: 0;
	margin: 16px;
	width: calc(400px - 32px);
	max-width: calc(100% - 32px);
}



@supports (backdrop-filter: blur(16px)) {
	.SearchBar .header,
	.introCard,
	.filtersPanel .MuiFab-root,
	.menuBlurredPaperBackground .MuiMenu-paper{
		background-color: rgba(255,255,255,0.9) !important;
		backdrop-filter: blur(16px);
	}
	@media (prefers-color-scheme: dark) {
		.SearchBar .header,
		.introCard,
		.filtersPanel .MuiFab-root,
		.menuBlurredPaperBackground .MuiMenu-paper{
			background-color: #202020cc !important;
		}
	}
}

